--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
     </div>
     <div>
         Création de la 3ieme Branche!!!!
-        ajouter quelque chose.!!!!!
+        ajouter quelque chose.
     </div>
     <ul>
         <li>1.Enumération</li>
